--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ ext {
 }
 
 dependencies {
+    implementation("org.yaml:snakeyaml:2.1")
+
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
